syntax = "proto3";
package Barigui.Prototipo.Events; 

import "google/protobuf/wrappers.proto";

option csharp_namespace = "Barigui.Prototipo.Events";


message EventId {
	
	string RequestId = 1;

	string CustomerId = 2;

}


message CustomerInfoInsertion{
	
	EventId Id = 1;

    string Nome = 2;

    string Email = 3;

    string Telefone = 4;

    string Idade  = 5;

}